# libtpms_trialpolicy_utils

./: .gitignore
include/libtpms/: tpm_library.h  tpm_library.h.in
man/man3/: TPMLIB_SetProfile.pod
src/: Makefile.am  libtpms.syms  tpm_library.c  tpm_tpm2_interface.c
src/tpm2/: AlgorithmCap.c  AlgorithmTests.c  CommandCodeAttributes.c  CryptUtil.c  EACommands.c  Manufacture.c  Manufacture_fp.h  NVMarshal.c  PCR.c  Platform_fp.h  PropertyCap.c  RuntimeAlgorithm.c  RuntimeAlgorithm_fp.h  RuntimeCommands.c  RuntimeCommands_fp.h  RuntimeProfile.c  RuntimeProfile_fp.h  Tpm.h  TpmFail.c  TpmTypes.h  Unmarshal.c  Volatile.c
src/tpm2/crypto/: CryptHash.h
src/tpm2/crypto/openssl/: CryptEccMain.c  CryptRsa.c  CryptSym.c  Helpers.c  Helpers_fp.h
tests/: Makefile.am  tpm2_setprofile.c
utils/: CMakeLists.txt
utils/programs/: CMakeLists.txt  util_policynv.cpp
